--- a/package.json
+++ b/package.json
@@ -6,16 +6,31 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "ts:check": "tsc"
   },
   "dependencies": {
     "expo": "~49.0.15",
+    "expo-barcode-scanner": "^12.7.0",
+    "expo-camera": "^13.6.0",
     "expo-status-bar": "~1.6.0",
-    "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react": "^18.2.0",
+    "react-native": "0.72.6",
+    "react-native-camera": "^4.2.1",
+    "react-native-safe-area-context": "^4.7.3",
+    "react-native-svg": "^13.14.0",
+    "react-native-vision-camera": "^3.5.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/expo": "^33.0.1",
+    "@types/jest": "^29.5.6",
+    "@types/react": "^18.2.31",
+    "@types/react-native": "^0.72.5",
+    "jest": "^29.7.0",
+    "react-test-renderer": "^18.2.0",
+    "ts-jest": "^29.1.1",
+    "typescript": "^5.2.2"
   },
   "private": true
 }
