--- a/package.json
+++ b/package.json
@@ -10,16 +10,35 @@
     "ts:check": "tsc"
   },
   "dependencies": {
+    "@radix-ui/react-form": "^0.0.3",
+    "@react-native-async-storage/async-storage": "^1.19.3",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/stack": "^6.3.20",
+    "@reduxjs/toolkit": "^1.9.7",
+    "dotenv": "^16.3.1",
     "expo": "~49.0.15",
-    "expo-barcode-scanner": "^12.7.0",
-    "expo-camera": "^13.6.0",
+    "expo-barcode-scanner": "^12.5.3",
+    "expo-camera": "^13.4.4",
+    "expo-constants": "^14.4.2",
     "expo-status-bar": "~1.6.0",
+    "nativewind": "^2.0.11",
+    "postcss": "^8.4.23",
     "react": "^18.2.0",
     "react-native": "0.72.6",
     "react-native-camera": "^4.2.1",
-    "react-native-safe-area-context": "^4.7.3",
-    "react-native-svg": "^13.14.0",
-    "react-native-vision-camera": "^3.5.1"
+    "react-native-config": "^1.5.1",
+    "react-native-gesture-handler": "^2.13.4",
+    "react-native-reanimated": "^3.5.4",
+    "react-native-safe-area-context": "^4.6.3",
+    "react-native-screens": "^3.27.0",
+    "react-native-svg": "^13.9.0",
+    "react-native-vision-camera": "^3.5.1",
+    "react-redux": "^8.1.3",
+    "redux": "^4.2.1",
+    "tailwind-rn": "^4.2.0",
+    "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -28,6 +47,7 @@
     "@types/react": "^18.2.31",
     "@types/react-native": "^0.72.5",
     "jest": "^29.7.0",
+    "react-native-dotenv": "^3.4.9",
     "react-test-renderer": "^18.2.0",
     "ts-jest": "^29.1.1",
     "typescript": "^5.2.2"
