--- a/.gitignore
+++ b/.gitignore
@@ -1,35 +1,34 @@
-# Learn more https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files
-
-# dependencies
-node_modules/
-
-# Expo
-.expo/
-dist/
-web-build/
-
-# Native
-*.orig.*
-*.jks
-*.p8
-*.p12
-*.key
-*.mobileprovision
-
-# Metro
-.metro-health-check*
-
-# debug
-npm-debug.*
-yarn-debug.*
-yarn-error.*
-
-# macOS
-.DS_Store
+# Logs 
+logs 
+*.log 
+npm-debug.log* 
+yarn-debug.log* 
+yarn-error.log* 
+pnpm-debug.log* 
+lerna-debug.log* 
+ 
+node_modules 
+dist 
+dist-ssr 
+*.local 
+ 
+# Editor directories and files 
+.vscode/* 
+!.vscode/extensions.json 
+.idea 
+.DS_Store 
+*.suo 
+*.ntvs* 
+*.njsproj 
+*.sln 
+*.sw? 
+ 
+# dotenv environment variable files 
+.env 
+.env.development.local 
+.env.test.local 
+.env.production.local 
+.env.local 
+ 
+#https stuff 
 *.pem
-
-# local env files
-.env*.local
-
-# typescript
-*.tsbuildinfo
