--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@radix-ui/react-form": "^0.0.3",
-    "@react-native-async-storage/async-storage": "^1.19.3",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
@@ -22,6 +22,7 @@
     "expo-barcode-scanner": "^12.5.3",
     "expo-camera": "^13.4.4",
     "expo-constants": "^14.4.2",
+    "expo-font": "~11.4.0",
     "expo-status-bar": "~1.6.0",
     "nativewind": "^2.0.11",
     "postcss": "^8.4.23",
@@ -29,10 +30,10 @@
     "react-native": "0.72.6",
     "react-native-camera": "^4.2.1",
     "react-native-config": "^1.5.1",
-    "react-native-gesture-handler": "^2.13.4",
-    "react-native-reanimated": "^3.5.4",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "^4.6.3",
-    "react-native-screens": "^3.27.0",
+    "react-native-screens": "~3.22.0",
     "react-native-svg": "^13.9.0",
     "react-native-vision-camera": "^3.5.1",
     "react-redux": "^8.1.3",
